# qclaw

./: .gitignore  COMMIT_HISTORY.md  Dockerfile  Dockerfile.frontend  MEMORY.md  README.md  REFACTOR_SUMMARY.md  USER_CONFIG_PROGRESS.md  coder.md  docker-compose.yml  nginx.conf  pytest.ini
.github/workflows/: ci.yml
.openclaw/: workspace-state.json
checkpoints/: TRAINING_REPORT.md  lstm_real_600519.pth
config/: end_to_end_config.yaml  settings.py
data/real/: 600519_贵州茅台.csv
docs/: README.md  docker-proxy-config.md  pm-blocking-issues-2026-03-06-1612.md  pm-deep-check-2026-03-06-1512.md  pm-monitoring.md
docs/archive/: design-evolution-summary.md
docs/backtest/: backtrader_guide.md
docs/design/: DESIGN-DL-003-status-final.md  README.md  TAURI-SETUP-GUIDE.md  check-history-summary.md  cross-platform-evaluation.md  (+86 more)
examples/: backtest_end_to_end.py  backtrader_example.py  predict_end_to_end.py  tft_end_to_end.py  train_end_to_end.py
logs/: perf_results_20260305_181147.json  perf_results_20260305_182844.json
memory/: 2026-03-05.md  test_report_2026-03-05.md  test_report_2026-03-05_v2.md
scripts/: test-system.sh  verify_pytorch_forecasting.py
server/: .env.example  main.py  requirements.txt
src/: __init__.py  config.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
tests/: __init__.py  conftest.py  test_backtrader_validation.py  test_momentum_indicators.py  test_moving_average.py  test_tft_integration.py  test_trend_indicators.py  test_utils.py
webui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
(+287 files in other folders)
