[package]
name = "qclaw-desktop"
version = "1.0.0"
description = "QCLaw 智能量化分析平台 - 桌面版"
authors = ["QCLaw Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
